<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/connect" />
    <item android:id="@+id/discoverable"
          android:icon="@android:drawable/ic_menu_mylocation"
          android:title="@string/discoverable" />
    <item android:id="@+id/trackpad"
    	  android:icon="@android:drawable/ic_menu_directions"
          android:title="@string/trackpad" />
   	<item android:id="@+id/localbroadcast"
    	  android:icon="@android:drawable/ic_menu_camera"
          android:title="@string/localbroadcast" />
    <item android:id="@+id/broadcast"
    	  android:icon="@android:drawable/ic_menu_camera"
          android:title="@string/broadcast" />
     <item android:id="@+id/settings"
          android:title="@string/settings" />
     <item android:id="@+id/accelerometer"
          android:title="@string/accelerometer" />
     <item android:id="@+id/voicerecognition"
          android:title="@string/voicerecognition" />
</menu>
